--- a/src/components/result-card/z-result-card/styles.css
+++ b/src/components/result-card/z-result-card/styles.css
@@ -1,7 +1,6 @@
 :host {
   display: flex;
   overflow: hidden;
-  width: 100%;
   min-width: 0;
   height: calc(174px - var(--space-unit) * 2);
   max-height: calc(174px - var(--space-unit) * 2);
@@ -91,7 +90,6 @@
 
 :host(.info-card) {
   display: flex;
-  width: 100%;
   height: calc(76px - var(--space-unit) * 2);
   max-height: calc(76px - var(--space-unit) * 2);
 }
